--- a/app_skill/src/main/res/layout/activity_main.xml
+++ b/app_skill/src/main/res/layout/activity_main.xml
@@ -7,13 +7,14 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
+    <com.fkq.common.custom.AppViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/gray">
+
+    </com.fkq.common.custom.AppViewPager>
 
 
     <android.support.design.widget.BottomNavigationView
