--- a/app_skill/src/main/res/values/styles.xml
+++ b/app_skill/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <item name="android:statusBarColor">@color/black</item>
     </style>
 
+    <style name="WhiteLineEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/colorTheme</item>
+
+    </style>
 </resources>
