--- a/app_skill/src/main/res/layout/fragment_one.xml
+++ b/app_skill/src/main/res/layout/fragment_one.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical">
 
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="one" />
+        android:layout_margin="10dp">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
