--- a/app_skill/src/main/res/layout/fragment_three.xml
+++ b/app_skill/src/main/res/layout/fragment_three.xml
@@ -2,33 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorTheme"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-
-    <com.fkq.common.custom.AppImageView
-        android:id="@+id/iv_head"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="40dp" />
-
-    <TextView
-        android:id="@+id/tv_name"
-        style="@style/text_6"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginBottom="20dp"
-        android:minWidth="50dp"
-        android:singleLine="true"
-        android:textStyle="bold"
-        android:textColor="@color/white" />
-
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/gray">
+        android:layout_height="200dp"
+        android:background="@color/colorTheme">
 
-    </View>
+
+        <ImageView
+            android:id="@+id/iv_share"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
+            android:src="@drawable/ic_share" />
+
+        <com.fkq.common.custom.AppImageView
+            android:id="@+id/iv_head"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            style="@style/text_6"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_below="@+id/iv_head"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:minWidth="50dp"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 </LinearLayout>
