--- a/app_mm/src/main/res/layout/fragment_one.xml
+++ b/app_mm/src/main/res/layout/fragment_one.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_title"
+        style="@style/text_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorTheme"
+        android:text="one" />
 
     <TextView
         android:layout_width="match_parent"
