--- a/app_mm/src/main/res/layout/fragment_two.xml
+++ b/app_mm/src/main/res/layout/fragment_two.xml
@@ -5,6 +5,13 @@
     android:orientation="vertical">
 
 
+    <ImageView
+        android:id="@+id/iv_title"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
