--- a/app_person/src/main/res/values/colors.xml
+++ b/app_person/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--App主题颜色-->
-    <color name="colorTheme">#22b2b8</color>
+    <color name="colorTheme">#22b2a1</color>
     //
 </resources>
