--- a/app_person/src/main/res/values/styles.xml
+++ b/app_person/src/main/res/values/styles.xml
@@ -6,7 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@color/black</item>
     </style>
 
+    <style name="WhiteLineEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/colorTheme</item>
+
+    </style>
 </resources>
