--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="green">#00cd60</color>
     <color name="transparent">#00000000</color>
     <color name="translucent">#50000000</color>
+    <color name="translucent8">#80000000</color>
     <color name="black">#000000</color>
 
     <color name="gray">#eeeeee</color>
