--- a/app_person/src/main/res/layout/fragment_one.xml
+++ b/app_person/src/main/res/layout/fragment_one.xml
@@ -2,19 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/tv_title"
-        style="@style/text_title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorTheme"
-        android:text="one" />
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/gray"
         android:gravity="center"
         android:text="one" />
 </LinearLayout>
