--- a/app_person/src/main/res/layout/fragment_two.xml
+++ b/app_person/src/main/res/layout/fragment_two.xml
@@ -5,11 +5,11 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-
     <ImageView
         android:id="@+id/iv_title"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:fitsSystemWindows="true"
         android:scaleType="centerCrop"
         android:src="@drawable/logo" />
 
