--- a/app_person/src/main/res/values/styles.xml
+++ b/app_person/src/main/res/values/styles.xml
@@ -3,9 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorTheme</item>
     </style>
 
     <style name="WhiteLineEditText" parent="Theme.AppCompat.Light">
