--- a/app_person/src/main/res/layout/activity_main.xml
+++ b/app_person/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
                 android:id="@+id/iv_menu"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:padding="12dp"
-                android:src="@drawable/ic_my" />
+                android:padding="10dp"
+                android:src="@drawable/ic_menu" />
 
             <TextView
                 android:id="@+id/tv_title"
