--- a/app_skill/src/main/res/layout/activity_main.xml
+++ b/app_skill/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       style="@style/text_title"
+       android:background="@color/colorTheme"
+       android:text="凡卡其技术"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
