--- a/app_skill/src/main/res/layout/dialog_sure.xml
+++ b/app_skill/src/main/res/layout/dialog_sure.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="260dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/style_bg_white_radius"
+    android:background="@drawable/com_bg_button"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="提示"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -22,7 +22,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp" />
 
     <RelativeLayout
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="取消"
-            android:textColor="@color/gray_font"
+            android:textColor="@color/white"
             android:textSize="15sp" />
 
 
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="确认"
-            android:textColor="@color/colorTheme"
+            android:textColor="@color/white"
             android:textSize="15sp" />
     </RelativeLayout>
 </LinearLayout>
