--- a/app_skill/src/main/res/layout/item_text.xml
+++ b/app_skill/src/main/res/layout/item_text.xml
@@ -9,8 +9,9 @@
         android:id="@+id/tv_name"
         style="@style/text_ty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:minHeight="50dp"
+        android:textColor="@color/colorTheme"
         android:singleLine="true" />
 
 </LinearLayout>
