--- a/app_skill/src/main/res/layout/activity_skill.xml
+++ b/app_skill/src/main/res/layout/activity_skill.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-
-    <com.yanzhenjie.recyclerview.SwipeRecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
+        android:id="@+id/ll_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </com.yanzhenjie.recyclerview.SwipeRecyclerView>
+    </LinearLayout>
+
 </LinearLayout>
